Remove unneeded required flags

--- a/index.html
+++ b/index.html
@@ -602,17 +602,17 @@
             <p>To connect to the Seqera Platform, please enter your credentials:</p>
             <div class="form-group">
               <label for="sp_frontend_url">Seqera Platform URL</label>
-              <input type="text" class="form-control" ng-model="seqeraplatform.frontend_url" id="sp_frontend_url" placeholder="Platform URL" value="https://tower.nf/" required>
+              <input type="text" class="form-control" ng-model="seqeraplatform.frontend_url" id="sp_frontend_url" placeholder="Platform URL" value="https://tower.nf/">
               <p class="help-block small">If using Seqera Cloud, leave as <code>https://tower.nf/</code>. If using a custom Seqera Enterprise installation, enter your base Seqera Platform URL.</p>
             </div>
             <div class="form-group">
               <label for="sp_api_base">API Base URL</label>
-              <input type="text" class="form-control" ng-model="seqeraplatform.api_base" id="sp_api_base" placeholder="API Base URL" value="https://api.tower.nf/" required>
+              <input type="text" class="form-control" ng-model="seqeraplatform.api_base" id="sp_api_base" placeholder="API Base URL" value="https://api.tower.nf/">
               <p class="help-block small">If using Seqera Cloud, leave as <code>https://api.tower.nf/</code>. If using a custom Seqera Enterprise installation, enter your base API route.</p>
             </div>
             <div class="form-group">
               <label for="sp_access_token">Access Token</label>
-              <input type="password" class="form-control" ng-model="seqeraplatform.access_token" id="sp_access_token" placeholder="Access Token" required>
+              <input type="password" class="form-control" ng-model="seqeraplatform.access_token" id="sp_access_token" placeholder="Access Token">
               <p class="help-block small">Create an Access Token at <a href="https://tower.nf/tokens" target="_blank">https://tower.nf/tokens</a> (or in your enterprise installation).</p>
             </div>
             <p class="small">
